--- a/src/options/options.css
+++ b/src/options/options.css
@@ -3,6 +3,19 @@
   transition-duration: 250ms;
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #00000000;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 2008px;
+  background: #10b981;
+}
+
 ::selection {
   background-color: #ffffff20;
 }
@@ -42,5 +55,5 @@
 }
 
 button[selected="yes"] {
-  background-color: #22c55e !important;
+  background-color: #10b981 !important;
 }
