--- a/src/options/options.css
+++ b/src/options/options.css
@@ -3,6 +3,13 @@
   transition-duration: 250ms;
 }
 
+@media screen and (max-width: 400px) {
+  .text-base {
+    font-size: 0.875rem !important;
+    line-height: 1.25rem !important;
+  }
+}
+
 ::-webkit-scrollbar {
   width: 8px;
 }
