change font to jetbrains mono

--- a/src/options/options.css
+++ b/src/options/options.css
@@ -1,5 +1,6 @@
 * {
-  font-family: "Fira Code", monospace;
+  /* font-family: "Fira Code", monospace; */
+  font-family: "Jetbrains Mono", monospace;
   transition-duration: 250ms;
 }
 
