--- a/src/options/options.css
+++ b/src/options/options.css
@@ -1,6 +1,11 @@
+@font-face {
+  font-family: "Jetbrains-Mono-Regular-Fixed";
+  src: url("../../assets/fonts/JetBrainsMono-Regular.woff2") format("woff2"),
+    url("../../assets/fonts/JetBrainsMono-Regular.ttf") format("ttf");
+}
+
 * {
-  /* font-family: "Fira Code", monospace; */
-  font-family: "Jetbrains Mono", monospace;
+  font-family: "Jetbrains-Mono-Regular-Fixed", monospace;
   transition-duration: 250ms;
 }
 
