--- a/src/options/options.css
+++ b/src/options/options.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "Jetbrains-Mono-Regular-Fixed";
-  src: url("../../assets/fonts/JetBrainsMono-Regular.woff2") format("woff2"),
-    url("../../assets/fonts/JetBrainsMono-Regular.ttf") format("ttf");
+  src: url("../assets/fonts/JetBrainsMono-Regular.woff2") format("woff2"),
+    url("../assets/fonts/JetBrainsMono-Regular.ttf") format("ttf");
 }
 
 * {
