add fly-right and fly-left animation and more

--- a/src/newtab/styles/animations.css
+++ b/src/newtab/styles/animations.css
@@ -134,18 +134,92 @@
 }
 
 .animate-grow-scale {
-  animation: animateGrowScale 500ms ease-in-out;
+  animation: animateGrowScale 350ms ease-in-out;
 }
 
 @keyframes animateGrowScale {
   0% {
     transform: scale(0);
-  }
-  80% {
-    transform: scale(1.1);
+    opacity: 0;
+    filter: blur(4px);
   }
   100% {
     transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.animate-fly-left {
+  animation: animateFlyLeft 750ms ease-in-out;
+}
+
+@keyframes animateFlyLeft {
+  0%,
+  60%,
+  75%,
+  90%,
+  100% {
+    transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+  0% {
+    opacity: 0;
+    transform: translateX(-3000px);
+    filter: blur(4px);
+  }
+  60% {
+    opacity: 1;
+    transform: translateX(25px);
+    filter: blur(2px);
+  }
+  75% {
+    transform: translateX(-10px);
+    filter: blur(0);
+  }
+  90% {
+    transform: translateX(5px);
+    filter: blur(0);
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+    filter: blur(0);
+  }
+}
+
+.animate-fly-right {
+  animation: animateFlyRight 750ms ease-in-out;
+}
+
+@keyframes animateFlyRight {
+  0%,
+  60%,
+  75%,
+  90%,
+  100% {
+    transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+  0% {
+    opacity: 0;
+    transform: translateX(3000px);
+    filter: blur(4px);
+  }
+  60% {
+    opacity: 1;
+    transform: translateX(-25px);
+    filter: blur(2px);
+  }
+  75% {
+    transform: translateX(10px);
+    filter: blur(0);
+  }
+  90% {
+    transform: translateX(-5px);
+    filter: blur(0);
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+    filter: blur(0);
   }
 }
 
