--- a/src/config-utils/config-utils.css
+++ b/src/config-utils/config-utils.css
@@ -32,3 +32,50 @@
 ::selection {
   background-color: #ffffff20;
 }
+
+.animate-up-bouncy {
+  animation: animateUpBouncy 2500ms ease-in-out;
+}
+
+@keyframes animateUpBouncy {
+  0% {
+    transform: translateY(20px);
+    opacity: 0;
+    filter: blur(4px);
+  }
+  25% {
+    transform: translateY(-10px);
+    opacity: 0.7;
+    filter: blur(2px);
+  }
+  50% {
+    transform: translateY(5px);
+    opacity: 1;
+    filter: blur(0);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.animate-float {
+  -webkit-animation: float 2000ms ease-in-out !important;
+  animation: float 2000ms ease-in-out !important;
+  animation-iteration-count: infinite !important;
+}
+
+@keyframes float {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(5px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+button[selected="yes"] {
+  background-color: #10b981 !important;
+}
