--- a/src/newtab/styles/index.css
+++ b/src/newtab/styles/index.css
@@ -1,7 +1,8 @@
+@import "https://www.nerdfonts.com/assets/css/webfont.css";
+
 @font-face {
   font-family: "Jetbrains-Mono-Regular-Fixed";
-  src: url("../../assets/fonts/JetBrainsMono-Regular.woff2") format("woff2"),
-    url("../../assets/fonts/JetBrainsMono-Regular.ttf") format("ttf");
+  src: url("../../assets/fonts/JetBrainsMonoNerdFontMono-Regular.ttf") format("truetype");
 }
 
 .bookmark-icon svg {
