make nerdfont css local

--- a/src/newtab/styles/index.css
+++ b/src/newtab/styles/index.css
@@ -1,4 +1,4 @@
-@import "https://www.nerdfonts.com/assets/css/webfont.css";
+@import "../../shared/nerdfont-webfont.css";
 
 @font-face {
   font-family: "Jetbrains-Mono-Regular-Fixed";
