hide control panel at top of options page

--- a/src/options/styles/index.css
+++ b/src/options/styles/index.css
@@ -26,3 +26,33 @@
 .drop-shadow {
   box-shadow: 0 25px 23px rgba(0, 0, 0, 0.15);
 }
+
+@keyframes fallDown {
+  0% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+}
+
+@keyframes fallUp {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.falling-down {
+  animation: fallDown 250ms ease-out forwards;
+}
+
+.falling-up {
+  animation: fallUp 250ms ease-out forwards;
+}
