--- a/src/shared/shared.css
+++ b/src/shared/shared.css
@@ -78,3 +78,13 @@
 button[selected="yes"] {
   background-color: #10b981 !important;
 }
+
+*:focus:not(input):not(textarea) {
+  outline: none !important;
+}
+
+*:focus-visible:not(input):not(textarea) {
+  outline: none !important;
+  border-radius: 0.375rem; /* rounded-md */
+  box-shadow: 0 0 0 2px #ec4899;
+}
