--- a/src/newtab/styles/index.css
+++ b/src/newtab/styles/index.css
@@ -22,9 +22,16 @@ html {
 }
 
 #cover {
+  z-index: 1;
+  pointer-events: none;
   transition: opacity 500ms cubic-bezier(0.25, 1, 0.5, 1);
   mask-image: radial-gradient(circle, rgba(0, 0, 0, 0) 30%, rgba(0, 0, 0, 1) 100%);
   -webkit-mask-image: radial-gradient(circle, rgba(0, 0, 0, 0) 30%, rgba(0, 0, 0, 1) 100%);
+}
+
+#content,
+#options-button-container {
+  z-index: 2;
 }
 
 .top-distance {
