--- a/src/assets/icons/remixicon/remixicon.css
+++ b/src/assets/icons/remixicon/remixicon.css
@@ -10,12 +10,7 @@
 */
 @font-face {
   font-family: "remixicon";
-  src: url('remixicon.eot?t=1769685282643'); /* IE9*/
-  src: url('remixicon.eot?t=1769685282643#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url("remixicon.woff2?t=1769685282643") format("woff2"),
-  url("remixicon.woff?t=1769685282643") format("woff"),
-  url('remixicon.ttf?t=1769685282643') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('remixicon.svg?t=1769685282643#remixicon') format('svg'); /* iOS 4.1- */
+  src: url("remixicon.woff2?t=1769685282643") format("woff2");
   font-display: swap;
 }
 
@@ -3272,4 +3267,3 @@
 .ri-zhipu-ai-line:before { content: "\f69b"; }
 .ri-connector-fill:before { content: "\f69c"; }
 .ri-connector-line:before { content: "\f69d"; }
-
