--- a/src/shared/shared.css
+++ b/src/shared/shared.css
@@ -86,5 +86,5 @@ button[selected="yes"] {
 *:focus-visible:not(input):not(textarea) {
   outline: none !important;
   border-radius: 0.375rem; /* rounded-md */
-  box-shadow: 0 0 0 2px #ec4899;
+  box-shadow: 0 0 0 2px #0ea5e9;
 }
